// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueList renders button in loading state 1`] = `
<div>
  <div
    className="BaseIssueListMenu-root-4"
  >
    <header
      className="MuiPaper-root-17 MuiPaper-elevation4-23 MuiAppBar-root-8 MuiAppBar-positionFixed-9 MuiAppBar-colorDefault-14 mui-fixed BaseIssueListMenu-appBar-5"
    >
      <div
        className="MuiToolbar-root-44 MuiToolbar-dense-47 MuiToolbar-gutters-45"
      >
        <div
          className="BaseIssueListMenu-filter-6"
        >
          <div
            className="BaseIssueListMenu-filterItem-7"
          >
            <h6
              className="MuiTypography-root-48 MuiTypography-h6-65 MuiTypography-colorInherit-77"
            >
              State
            </h6>
          </div>
          <div
            className="BaseIssueListMenu-filterItem-7"
          >
            <div
              className="MuiInputBase-root-103 MuiInput-root-90 MuiInput-underline-94"
              onClick={[Function]}
            >
              <div
                className="MuiSelect-root-83"
              >
                <div
                  aria-haspopup="true"
                  aria-pressed="false"
                  className="MuiSelect-select-84 MuiSelect-selectMenu-87 MuiInputBase-input-113 MuiInput-input-98"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  All
                </div>
                <input
                  id="state"
                  name="state"
                  type="hidden"
                  value="all"
                />
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-120 MuiSelect-icon-89"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "marginTop": 100,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
        }
      }
    >
      <div
        className="MuiCircularProgress-root-267 MuiCircularProgress-colorPrimary-270 MuiCircularProgress-indeterminate-269"
        role="progressbar"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-272"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-273 MuiCircularProgress-circleIndeterminate-275"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`IssueList renders correct 1`] = `
<div>
  <div
    className="BaseIssueListMenu-root-4"
  >
    <header
      className="MuiPaper-root-17 MuiPaper-elevation4-23 MuiAppBar-root-8 MuiAppBar-positionFixed-9 MuiAppBar-colorDefault-14 mui-fixed BaseIssueListMenu-appBar-5"
    >
      <div
        className="MuiToolbar-root-44 MuiToolbar-dense-47 MuiToolbar-gutters-45"
      >
        <div
          className="BaseIssueListMenu-filter-6"
        >
          <div
            className="BaseIssueListMenu-filterItem-7"
          >
            <h6
              className="MuiTypography-root-48 MuiTypography-h6-65 MuiTypography-colorInherit-77"
            >
              State
            </h6>
          </div>
          <div
            className="BaseIssueListMenu-filterItem-7"
          >
            <div
              className="MuiInputBase-root-103 MuiInput-root-90 MuiInput-underline-94"
              onClick={[Function]}
            >
              <div
                className="MuiSelect-root-83"
              >
                <div
                  aria-haspopup="true"
                  aria-pressed="false"
                  className="MuiSelect-select-84 MuiSelect-selectMenu-87 MuiInputBase-input-113 MuiInput-input-98"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  All
                </div>
                <input
                  id="state"
                  name="state"
                  type="hidden"
                  value="all"
                />
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-120 MuiSelect-icon-89"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
  <div
    className="MuiGrid-container-133"
  >
    <div
      className="MuiGrid-item-134 MuiGrid-grid-xs-12-173 BaseIssueList-gridItem-1"
    >
      <div>
        <div
          className="MuiPaper-root-17 MuiPaper-elevation2-21 MuiPaper-rounded-18 BaseIssueListItem-paper-230"
        >
          <div>
            <a
              href="/issue?owner=owner&repo=repo&number=12"
              onClick={[Function]}
            >
              <h6
                className="MuiTypography-root-48 MuiTypography-h6-65 MuiTypography-colorInherit-77"
              >
                title
              </h6>
              <h6
                className="MuiTypography-root-48 MuiTypography-subtitle1-66 MuiTypography-colorInherit-77"
              >
                #
                12
                 opened 
                5 days ago
                 by 
                qwe
              </h6>
            </a>
          </div>
          <div />
        </div>
      </div>
    </div>
    <div
      className="BaseIssueList-submitButtonWrap-2"
    >
      <button
        className="MuiButtonBase-root-257 MuiButton-root-231 MuiButton-contained-242 MuiButton-containedPrimary-243 MuiButton-raised-245 MuiButton-raisedPrimary-246"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-232"
        >
          Load more
        </span>
        <span
          className="MuiTouchRipple-root-260"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`IssueList renders if repo is not defined 1`] = `
<div>
  <div
    className="BaseIssueListMenu-root-4"
  >
    <header
      className="MuiPaper-root-17 MuiPaper-elevation4-23 MuiAppBar-root-8 MuiAppBar-positionFixed-9 MuiAppBar-colorDefault-14 mui-fixed BaseIssueListMenu-appBar-5"
    >
      <div
        className="MuiToolbar-root-44 MuiToolbar-dense-47 MuiToolbar-gutters-45"
      >
        <div
          className="BaseIssueListMenu-filter-6"
        >
          <div
            className="BaseIssueListMenu-filterItem-7"
          >
            <h6
              className="MuiTypography-root-48 MuiTypography-h6-65 MuiTypography-colorInherit-77"
            >
              State
            </h6>
          </div>
          <div
            className="BaseIssueListMenu-filterItem-7"
          >
            <div
              className="MuiInputBase-root-103 MuiInput-root-90 MuiInput-underline-94"
              onClick={[Function]}
            >
              <div
                className="MuiSelect-root-83"
              >
                <div
                  aria-haspopup="true"
                  aria-pressed="false"
                  className="MuiSelect-select-84 MuiSelect-selectMenu-87 MuiInputBase-input-113 MuiInput-input-98"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  All
                </div>
                <input
                  id="state"
                  name="state"
                  type="hidden"
                  value="all"
                />
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-120 MuiSelect-icon-89"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
  <div>
    No repo is defined
    .
     
    <span>
      Try
       
      <a
        href="/?owner=zeit&repo=next.js"
        onClick={[Function]}
      >
        zeit/next.js
      </a>
    </span>
  </div>
</div>
`;

exports[`IssueList renders if the items property is empty 1`] = `
<div>
  <div
    className="BaseIssueListMenu-root-4"
  >
    <header
      className="MuiPaper-root-17 MuiPaper-elevation4-23 MuiAppBar-root-8 MuiAppBar-positionFixed-9 MuiAppBar-colorDefault-14 mui-fixed BaseIssueListMenu-appBar-5"
    >
      <div
        className="MuiToolbar-root-44 MuiToolbar-dense-47 MuiToolbar-gutters-45"
      >
        <div
          className="BaseIssueListMenu-filter-6"
        >
          <div
            className="BaseIssueListMenu-filterItem-7"
          >
            <h6
              className="MuiTypography-root-48 MuiTypography-h6-65 MuiTypography-colorInherit-77"
            >
              State
            </h6>
          </div>
          <div
            className="BaseIssueListMenu-filterItem-7"
          >
            <div
              className="MuiInputBase-root-103 MuiInput-root-90 MuiInput-underline-94"
              onClick={[Function]}
            >
              <div
                className="MuiSelect-root-83"
              >
                <div
                  aria-haspopup="true"
                  aria-pressed="false"
                  className="MuiSelect-select-84 MuiSelect-selectMenu-87 MuiInputBase-input-113 MuiInput-input-98"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  All
                </div>
                <input
                  id="state"
                  name="state"
                  type="hidden"
                  value="all"
                />
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-120 MuiSelect-icon-89"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
  <div
    className="MuiGrid-container-133"
  >
    <div>
      No items
    </div>
  </div>
</div>
`;

exports[`IssueList renders isLoadingMore state 1`] = `
<div>
  <div
    className="BaseIssueListMenu-root-4"
  >
    <header
      className="MuiPaper-root-17 MuiPaper-elevation4-23 MuiAppBar-root-8 MuiAppBar-positionFixed-9 MuiAppBar-colorDefault-14 mui-fixed BaseIssueListMenu-appBar-5"
    >
      <div
        className="MuiToolbar-root-44 MuiToolbar-dense-47 MuiToolbar-gutters-45"
      >
        <div
          className="BaseIssueListMenu-filter-6"
        >
          <div
            className="BaseIssueListMenu-filterItem-7"
          >
            <h6
              className="MuiTypography-root-48 MuiTypography-h6-65 MuiTypography-colorInherit-77"
            >
              State
            </h6>
          </div>
          <div
            className="BaseIssueListMenu-filterItem-7"
          >
            <div
              className="MuiInputBase-root-103 MuiInput-root-90 MuiInput-underline-94"
              onClick={[Function]}
            >
              <div
                className="MuiSelect-root-83"
              >
                <div
                  aria-haspopup="true"
                  aria-pressed="false"
                  className="MuiSelect-select-84 MuiSelect-selectMenu-87 MuiInputBase-input-113 MuiInput-input-98"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  All
                </div>
                <input
                  id="state"
                  name="state"
                  type="hidden"
                  value="all"
                />
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-120 MuiSelect-icon-89"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
  <div
    className="MuiGrid-container-133"
  >
    <div
      className="MuiGrid-item-134 MuiGrid-grid-xs-12-173 BaseIssueList-gridItem-1"
    >
      <div>
        <div
          className="MuiPaper-root-17 MuiPaper-elevation2-21 MuiPaper-rounded-18 BaseIssueListItem-paper-230"
        >
          <div>
            <a
              href="/issue?owner=owner&repo=repo&number=12"
              onClick={[Function]}
            >
              <h6
                className="MuiTypography-root-48 MuiTypography-h6-65 MuiTypography-colorInherit-77"
              >
                title
              </h6>
              <h6
                className="MuiTypography-root-48 MuiTypography-subtitle1-66 MuiTypography-colorInherit-77"
              >
                #
                12
                 opened 
                5 days ago
                 by 
                qwe
              </h6>
            </a>
          </div>
          <div />
        </div>
      </div>
    </div>
    <div
      className="BaseIssueList-submitButtonWrap-2"
    >
      <button
        className="MuiButtonBase-root-257 MuiButtonBase-disabled-258 MuiButton-root-231 MuiButton-contained-242 MuiButton-containedPrimary-243 MuiButton-raised-245 MuiButton-raisedPrimary-246 MuiButton-disabled-251"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="submit"
      >
        <span
          className="MuiButton-label-232"
        >
          Loading...
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`IssueList renders on error 1`] = `
<div>
  <div
    className="BaseIssueListMenu-root-4"
  >
    <header
      className="MuiPaper-root-17 MuiPaper-elevation4-23 MuiAppBar-root-8 MuiAppBar-positionFixed-9 MuiAppBar-colorDefault-14 mui-fixed BaseIssueListMenu-appBar-5"
    >
      <div
        className="MuiToolbar-root-44 MuiToolbar-dense-47 MuiToolbar-gutters-45"
      >
        <div
          className="BaseIssueListMenu-filter-6"
        >
          <div
            className="BaseIssueListMenu-filterItem-7"
          >
            <h6
              className="MuiTypography-root-48 MuiTypography-h6-65 MuiTypography-colorInherit-77"
            >
              State
            </h6>
          </div>
          <div
            className="BaseIssueListMenu-filterItem-7"
          >
            <div
              className="MuiInputBase-root-103 MuiInput-root-90 MuiInput-underline-94"
              onClick={[Function]}
            >
              <div
                className="MuiSelect-root-83"
              >
                <div
                  aria-haspopup="true"
                  aria-pressed="false"
                  className="MuiSelect-select-84 MuiSelect-selectMenu-87 MuiInputBase-input-113 MuiInput-input-98"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  All
                </div>
                <input
                  id="state"
                  name="state"
                  type="hidden"
                  value="all"
                />
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-120 MuiSelect-icon-89"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
  <div>
    Some error
    .
     
  </div>
</div>
`;
